# snapvec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PERF_DECISION.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.py  test_astype_perf.py  test_script.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.jules/: bolt.md
docs/: architecture.md  benchmarks.md  index.md
docs/adr/: 0001-rht-off-by-default-in-pq.md  0002-early-stop-for-ivf-probing-parked.md  0003-opq-p-over-opq-np.md  0004-cluster-contiguous-column-major-codes.md  0005-memory-budget-discipline.md  README.md
docs/api/: helpers.md  ivf-pq.md  pq.md  residual.md  snap-index.md
docs/blog/: 01-numpy-perf-ceiling.md  02-fast-extension.md  02-numba-followup.md  README.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: choosing-an-index.md  concurrency.md  filter-search.md  ivf-pq.md  pq.md  residual.md  save-load.md  snap-index.md
examples/: filter_search.py  ivf_pq.py  pq_index.py  quickstart.py  save_load.py  streaming_ingest.py
examples/notes-rag/: .gitignore  README.md  pyproject.toml
examples/notes-rag/example_vault/: kubernetes-basics.md  python-tips.md  vector-search-reading.md
examples/notes-rag/notes_rag/: __init__.py  chunker.py  cli.py  indexer.py  ollama_backend.py  store.py
examples/notes-rag/tests/: test_chunker.py  test_store_and_indexer.py
experiments/: PERF_NOTES.md  _bench_astype_cleanup.py  _bench_load_memory.py  _colab_embed_corpus.py  _embed_fiqa.py  _profile_add_batch.py  _profile_add_batch_1m.py  bench_bolt_einsum_impact.py  bench_competitive.py  bench_e2e_profile.py  bench_fused_gather_adc.py  bench_gather_vectorize.py  bench_ivf_pq_1m_baseline.py  bench_ivf_pq_1m_real.py  bench_ivf_pq_1m_v2.py  bench_ivf_pq_contiguous.py  bench_ivf_pq_early_stop.py  bench_ivf_pq_fiqa_recall.py  bench_ivf_pq_search_batch.py  bench_ivf_pq_threading.py  bench_ivfpq_opq.py  bench_ivfpq_streaming.py  bench_multi_round_rht_real.py  bench_pq_scaleup_validation.py  bench_residual_coarse_fine.py  bench_sqlite_vec_baseline.py  bench_v090_fiqa.py  bench_v090_full.py  bench_v090_scale.py  bench_vectorized_adc.py  plot_pareto.py  spike_hnswpq.py
paper/: snapvec-0.11.md
snapvec/: __init__.py  _codebooks.py  _fast.py  _fast.pyi  _fast.pyx  _fast_fallback.py  _file_format.py  _freezable.py  _index.py  _ivfpq.py  _kmeans.py  _pq.py  _residual.py  _rotation.py
tests/: test_adversarial.py  test_determinism.py  test_dtype_invariants.py  test_file_format.py  test_freeze.py  test_ivfpq.py  test_ivfpq_filter.py  test_pq.py  test_properties.py  test_recall_regression.py  test_residual.py  test_snapvec.py
