[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapvec"
dynamic = ["version"]
description = "Fast compressed ANN search via randomized Hadamard transform and optimal Gaussian scalar quantization. Pure NumPy, no heavy dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "vector-search", "ann", "approximate-nearest-neighbor",
    "quantization", "embeddings", "hadamard", "lloyd-max",
    "rag", "semantic-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.59.0",
]

[project.urls]
Homepage     = "https://github.com/stffns/snapvec"
Repository   = "https://github.com/stffns/snapvec"
Issues       = "https://github.com/stffns/snapvec/issues"

[tool.hatch.version]
path = "snapvec/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["snapvec"]

[tool.hatch.build.targets.sdist]
exclude = [
    "experiments/",
    ".github/",
    ".claude/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = false   # NDArray generics handled by numpy.typing
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false   # relaxed for test files

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy>=1.8",
    "ruff",
]
