[build-system]
requires = ["setuptools>=68.0", "Cython>=3.0", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snapvec"
version = "0.8.1"
description = "Fast compressed ANN search via randomized Hadamard transform and optimal Gaussian scalar quantization. NumPy + Cython compiled kernels."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "vector-search", "ann", "approximate-nearest-neighbor",
    "quantization", "embeddings", "hadamard", "lloyd-max",
    "rag", "semantic-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.urls]
Homepage     = "https://github.com/stffns/snapvec"
Repository   = "https://github.com/stffns/snapvec"
Issues       = "https://github.com/stffns/snapvec/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy>=1.8",
    "ruff",
    "Cython>=3.0",
]

[tool.setuptools.packages.find]
include = ["snapvec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = false
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
