[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapvec-notes"
version = "0.1.0"
description = "Local RAG over markdown notes using snapvec + Ollama. Example application for the snapvec library."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jayson Steffens" }]
keywords = ["rag", "markdown", "notes", "ollama", "snapvec", "local-first"]
dependencies = [
    "snapvec>=0.3.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
notes-rag = "notes_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["notes_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
